--- a/platforms/android/project.properties
+++ b/platforms/android/project.properties
@@ -13,3 +13,4 @@
 target=android-22
 android.library.reference.1=CordovaLib
 android.library.reference.1=CordovaLib
+android.library.reference.1=CordovaLib
